# lab-rust-di

entrait-0-7-1/: Cargo.toml  Dockerfile
entrait-0-7-1/src/: app_state.rs  error.rs  main.rs
entrait-0-7-1/src/bootstrap/: connections.rs  mod.rs  router.rs
entrait-0-7-1/src/domain/: order.rs
entrait-0-7-1/src/handler/: audit_log.rs  health.rs  master_data.rs  order.rs  product.rs
entrait-0-7-1/src/infrastructure/: health_checker.rs  mod.rs  nats_event_publisher.rs  nats_order_subscriber.rs  postgres_audit_log_repository.rs  postgres_order_repository.rs  postgres_product_repository.rs  redis_master_data_repository.rs  redis_product_cache.rs
entrait-0-7-1/src/interface/: audit_log_repository.rs  event_publisher.rs  health_service.rs  master_data_repository.rs  mod.rs  order_repository.rs  product_cache.rs  product_repository.rs
entrait-0-7-1/src/service/: audit_log_service_impl.rs  health_service_impl.rs  master_data_service_impl.rs  mod.rs  order_service_impl.rs  product_service_impl.rs
entrait-0-7-1/src/subscriber/: nats_order_subscriber.rs
entrait-0-7-1/src/test_support/: fixtures.rs  mod.rs  test_db.rs
nject-0-4-5/: Cargo.toml  Dockerfile
nject-0-4-5/src/: config.rs  error.rs  main.rs  provider.rs
nject-0-4-5/src/bootstrap/: connections.rs  mod.rs  router.rs
nject-0-4-5/src/domain/: audit_log.rs  product.rs
nject-0-4-5/src/handler/: audit_log.rs  health.rs  master_data.rs  mod.rs  order.rs  product.rs
nject-0-4-5/src/infrastructure/: health_checker.rs  nats_event_publisher.rs  postgres_audit_log_repository.rs  postgres_order_repository.rs  postgres_product_repository.rs  redis_master_data_repository.rs  redis_product_cache.rs  seed.rs
nject-0-4-5/src/interface/: audit_log_repository.rs  audit_log_service.rs  event_publisher.rs  (+9 more)
(+89 files in other folders)
